--- a/pagina del curso/styles.css
+++ b/pagina del curso/styles.css
@@ -37,7 +37,7 @@ body {
     text-align: center;
 }
 header {
-    background-color: #004981;
+    background: linear-gradient(45deg, #265794, #53d694);
     color: white;
     padding: 2rem 0;
     display: flex;
@@ -45,10 +45,12 @@ header {
     justify-content: center;
     align-items: center;
     text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }   
 
 .Menu-fondo {
     background-color: white;
+    margin-bottom: -55px;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 15px;
@@ -68,7 +70,7 @@ nav ul {
 
 nav ul li a {
     text-decoration: none;
-    color: #004981;
+    color: #676767;
 }
 
 nav ul li a:hover {
@@ -77,6 +79,7 @@ nav ul li a:hover {
 
 main {
     flex-grow: 1;
+    padding: 40px;
 }
 
 main ul {
@@ -94,6 +97,7 @@ main ul li a{
 }
 
 p {
+    line-height: 1.5;
     max-width: 500;
 }
 
@@ -121,8 +125,9 @@ button {
 button:hover {
     background-color: rgb(73, 182, 192);
     cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(45deg, #265794, #53d694);
 }
 footer a {
     text-decoration: none;
@@ -133,4 +138,61 @@ footer a:hover {
     background-color: #f1f1f1;
     text-align: center;
     padding: 1rem 0;
+}
+
+.formulario-contacto {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+input {
+    border: 1px solid gray;     
+    border-radius: 50px;        
+    padding: 8px;           
+}
+
+.parrafo-acerca {
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.habilidades-wrap {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.habilidades-item {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    max-width: 500px;
+}
+
+.habilidades-barra {
+    position: relative;
+    width: 100%;
+    height: 6px;
+    background-color: transparent;
+}
+
+.habilidades-line-gray {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #ccc;
+    border-radius: 3px;
+}
+
+.habilidades-line-gradient {
+    position: absolute;
+    width: var(--w, 100%);
+    height: 100%;
+    background: linear-gradient(45deg, #265794, #53d694);
+    border-radius: 3px;
 }
