--- a/pagina del curso/styles.css
+++ b/pagina del curso/styles.css
@@ -114,6 +114,15 @@ footer {
     margin-top: 2rem;
 }
 
+.contacto-info {
+    margin-left: 0;
+    padding-left: 0;
+    list-style: none;
+}
+.contacto-info li {
+    margin-bottom: 3px;
+}
+
 button {
     border: 1px solid #004981;
     padding: 10px 15px;
@@ -146,6 +155,16 @@ footer a:hover {
     gap: 10px;
     align-items: center;
     margin-bottom: 50px;
+    max-width: 500px;    
+    width: 100%;         
+    margin: 0 auto 50px;  
+}
+
+.formulario-contacto input,
+.formulario-contacto button {
+    width: 100%;        
+    padding: 10px;
+    font-size: 16px;
 }
 
 input {
@@ -195,4 +214,10 @@ input {
     height: 100%;
     background: linear-gradient(45deg, #265794, #53d694);
     border-radius: 3px;
+}
+
+section iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 600px;
 }
