--- a/pagina del curso/styles.css
+++ b/pagina del curso/styles.css
@@ -205,12 +205,21 @@ input {
     background-color: transparent;
 }
 
-.habilidades-line-gray {
+.habilidades-line-gradient {
     position: absolute;
-    width: 100%;
     height: 100%;
-    background-color: #ccc;
-    border-radius: 3px;
+    width: 100%;
+    background: linear-gradient(to right, #00c3ff, #005dff);
+    border-radius: 10px;
+    transform: scaleX(0);
+    transform-origin: left;
+    animation: expandBar 2s ease-out forwards;
+}
+
+@keyframes expandBar {
+    to {
+        transform: scaleX(1);
+    }
 }
 
 .habilidades-line-gradient {
